Change Log
==========

1.7.8 (unreleased)
------------------


1.7.7 (2012-02-27)
------------------

- Explicitly encode/decode data for GS


1.7.6 (2011-10-31)
------------------

- Launchpad #795086:  fixed creation of PropertiesUpdated event.


1.7.5 (2011-05-30)
------------------

- Launchpad #789858:  don't allow conflicting login name in 'updateUser'.

- Set appropriate cache headers on CookieAuthHelper login redirects to prevent
  caching by proxy servers.


1.7.4 (2011-05-13)
------------------

- Added forward compatibility with DateTime 3.


1.7.3 (2011-02-10)
------------------

- In the ZODBRoleManager made it clearer that adding a removing a role
  does not have much effect if you do not do the same in the root of
  the site (at the bottom of the Security tab at manage_access).
  Fixes https://bugs.launchpad.net/zope-pas/+bug/672694

- Return the created user in _doAddUser, to match change in
  AccessControl 2.13.4.

- Fixed possible ``binascii.Error`` in ``extractCredentials`` of
  CookieAuthHelper. This is a corner case that might happen after
  a browser upgrade.


1.7.2 (2010-11-11)
------------------

- Allow for a query string in CookieAuthHelper's ``login_path``.

- Trap "swallowable" exceptions from ``IRoles`` plugins.  Thanks to
  Willi Langenburger for the patch.  Fixes
  https://bugs.launchpad.net/zope-pas/+bug/615474 .

- Fixed possible TypeError in ``extractCredentials`` of CookieAuthHelper
  when the ``__ac`` cookie is not ours (but e.g. from plone.session,
  though even then only in a corner case).

- Fixed chameleon incompatibilities


1.7.1 (2010-07-01)
------------------

- Made ``ZODBRoleManager.assignRoleToPrincipal`` raise and log a more
  informative error when detecting a duplicate principal.
  https://bugs.launchpad.net/zope-pas/+bug/348795

- Updated ``DynamicGroupsPlugin.enumerateGroups`` to return an empty sequence
  for an unknown group ID, rather than raising KeyError.
  https://bugs.launchpad.net/zope-pas/+bug/585365
